--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
+
         android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
@@ -17,18 +18,21 @@
         android:theme="@style/Theme.TestAn40121"
         tools:targetApi="m">
         <activity
+            android:screenOrientation="portrait"
             android:name=".activitys.AddActivity"
             android:label="@string/title_activity_add"
             android:theme="@style/Theme.TestAn40121.NoActionBar">
         </activity>
-        <activity android:name=".activitys.RegActivity">
+        <activity android:name=".activitys.RegActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activitys.MainActivity">
+        <activity android:name=".activitys.MainActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
