--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    //noinspection GradleDeprecatedConfiguration
+    implementation "com.github.mklimek:ssl-utils-android:1.0.1"
 }
