--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,12 @@ android {
 dependencies {
     implementation 'com.android.support:appcompat-v7:30.0.0'
     implementation 'com.android.support:design:30.0.0'
+    implementation 'com.google.android.material:material:1.4.0-beta01'
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    //implementation 'com.android.support:multidex:1.0.3'
+    //implementation 'androidx.multidex:multidex:2.0.1'
+
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.android.support:leanback-v17:30.0.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -40,7 +44,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'org.jetbrains:annotations:15.0'
-    androidTestImplementation 'android.arch.navigation:navigation-testing:2.3.2'
+    //androidTestImplementation 'android.arch.navigation:navigation-testing:2.3.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -50,6 +54,4 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
 
-    //noinspection GradleDeprecatedConfiguration
-    implementation "com.github.mklimek:ssl-utils-android:1.0.1"
 }
